<resources>
    <string name="app_name">DC Characters</string>
    <string name="character_image">Character image</string>
    <string name="couldn_t_load_list">Couldn\'t load list!</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="any_race">Any Race</string>
    <string name="any_gender">Any Gender</string>
    <string name="filter">Filter</string>
    <string name="sorting_image">Sorting image</string>
    <string name="filter_by_race_image">Filter by race image</string>
    <string name="filter_by_gender_image">Filter by gender image</string>
    <string name="apply">Apply</string>
    <string name="dc_cover_image">DC Cover Image</string>
    <string name="dc_character_image">DC Character image</string>
    <string name="power_stats">Power Stats</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="appearance">Appearance</string>
    <string name="biography">Biography</string>
    <string name="affiliations">Affiliations</string>
    <string name="relatives">Relatives</string>
    <string name="oops_nerror_loading_data">Oops!!!\nError Loading Data</string>
    <string name="retry">Retry</string>
    <string name="no_results_found_nclear_filters">No results found \nClear filters?</string>
    <string name="clear">Clear</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="power">Power</string>
    <string name="durability">Durability</string>
    <string name="combat">Combat</string>
    <string name="intelligence">Intelligence</string>
    <string name="hey_do_you_know_">Hey, do you know </string>
    <string name="from_message">from DC-Universe? Checkout his stats on</string>
    <string name="playstore_app_link">https://play.google.com/store/apps/details?id=com.dccharacters.android</string>
    <string name="share_using">Share using</string>
    <string name="sharing_failed">Sharing failed, Try again later!</string>

    <!--String Arrays-->

    <string-array name="sort_by">
        <item>@string/sort_by_name</item>
        <item>Sort by Combat Skill</item>
        <item>Sort by Durability</item>
        <item>Sort by Intelligence</item>
        <item>Sort by Power</item>
        <item>Sort by Speed</item>
        <item>Sort by Strength</item>
    </string-array>

    <string-array name="filter_by_race">
        <item>@string/any_race</item>
        <item>Alien</item>
        <item>Android</item>
        <item>Amazon</item>
        <item>Animal</item>
        <item>Atlantean</item>
        <item>Bizarro</item>
        <item>Bolovaxian</item>
        <item>Cyborg</item>
        <item>Czarnian</item>
        <item>Demi-God</item>
        <item>Demon</item>
        <item>God / Eternal</item>
        <item>Gorilla</item>
        <item>Human</item>
        <item>Human / Cosmic</item>
        <item>Human / Radiation</item>
        <item>Human-Vuldarian</item>
        <item>Korugaran</item>
        <item>Kryptonian</item>
        <item>Metahuman</item>
        <item>Martian</item>
        <item>New God</item>
        <item>Parademon</item>
        <item>Talokite</item>
        <item>Tamaranean</item>
        <item>Ungaran</item>
        <item>Zombie</item>
    </string-array>

    <string-array name="filter_by_gender">
        <item>@string/any_gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Unknown</item>
    </string-array>
</resources>