<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.characterdetail.CharacterDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--CardView Character-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_power_stats"
                android:layout_width="0dp"
                android:layout_height="380dp"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/cover_image"
                        android:layout_width="0dp"
                        android:layout_height="250dp"
                        android:contentDescription="@string/dc_cover_image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dc_landscape"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_character"
                        android:layout_width="0dp"
                        android:layout_height="190dp"
                        android:layout_marginStart="16dp"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/cover_image"
                        app:layout_constraintDimensionRatio="w,2:3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cover_image">

                        <ImageView
                            android:id="@+id/profile_character"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/dc_character_image"
                            app:srcCompat="@drawable/darkseid" />
                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/title_power_stats"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:text="@string/power_stats"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/card_character"
                        app:layout_constraintTop_toBottomOf="@+id/cover_image" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coming_soon"
                        app:layout_constraintEnd_toEndOf="@+id/title_power_stats"
                        app:layout_constraintStart_toStartOf="@+id/title_power_stats"
                        app:layout_constraintTop_toBottomOf="@+id/title_power_stats" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <!--CardView Appearance-->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_appearance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_power_stats">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/title_appearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/appearance"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_appearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp"
                        tools:text="This is where the appearance text will be when I fetch it from the API" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!--CardView Biography-->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_biography"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_appearance">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/title_biography"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/biography"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_biography"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp"
                        tools:text="This is where the bio text will be when I fetch it from the API" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <!--CardView Affiliations-->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_affiliations"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_biography">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/title_affiliations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/affiliations"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        app:layout_constraintTop_toBottomOf="@+id/cardView_biography" />

                    <TextView
                        android:id="@+id/text_affiliations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        app:layout_constraintTop_toBottomOf="@+id/title_affiliations"
                        tools:text="This is where the affiliations will be when I fetch it from the API" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--CardView Relatives-->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_relatives"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_affiliations">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/title_relatives"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/relatives"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_relatives"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textSize="16sp"
                        tools:text="* Mother's name\n* Father's name\n* Brother's name" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>